--- a/cpsmain/cpsmain.css
+++ b/cpsmain/cpsmain.css
@@ -40,6 +40,7 @@ body {
     white-space:wrap;
     font-size: clamp(2px, 2vw, 24px);
     overflow:hidden;
+    color: black;
 }
 .button:hover {
     background: linear-gradient(to top right, rgb(105, 22, 22), #aa3427, #da4d2e);
