--- a/cpsmembers/cpsmembers.css
+++ b/cpsmembers/cpsmembers.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;/*#2d0b1e*/
+    background-color: #2d0b1e;
 }
 #title {
     font-family:'abril fatface', impact, serif;
